upgrades java version to 16/ adds integration with mongodb cluster/ openapi configuration
